--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -83,9 +83,10 @@ textarea {
 // INPUT VALUES
 .selectize-input {
 	@extend input;
+	overflow: visible;
 	$input-item-margin: 0 2px 0 0;
 	width: 100%;
-
+	
 	&.disabled, &.disabled * {
 		cursor: default !important;
 	}
@@ -94,7 +95,7 @@ textarea {
 		display: -moz-inline-stack;
 		display: inline-block;
 		zoom: 1;
-		*display: inline;
+		display: inline;
 	}
 
 	.selectize-control.multi & > div {
@@ -126,11 +127,10 @@ textarea {
 
 		&::-ms-clear { display: none; }
 		&:focus { outline: none !important; }
-	}
+	}	
 }
 
 // DROPDOWN VALUES
-
 .selectize-dropdown {
 	@include box-sized();
 	position:   absolute;
